[tool.poetry]
name = "FunctionAppDemo"
version = "0.1.0"
description = ""
authors = ["Karel Gudera <karel.gudera@datasentics.com>"]

[tool.poetry.dependencies]
python = "^3.7"
azure-functions = "^1.2.1"
azure-identity = "^1.3.1"
azure-mgmt-resource = "^10.0.0"
azure-mgmt-containerinstance = "^1.5.0"
requests = "^2.23.0"
pyyaml = "^5.3.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
pytest = "~5.2.2"
