[tool.poetry]
name = "ACIProxy"
version = "0.1.0"
description = ""

authors = [
    "Karel Gudera <karel.gudera@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.7"
azure-functions = "^1.2.1"
azure-identity = "^1.5.0"
azure-mgmt-resource = "^15.0.0"
azure-mgmt-containerinstance = "^7.0.0"
msrestazure = "^0.6.4"
requests = "^2.23.0"
pyyaml = "^5.3.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
pytest = "~5.2.2"
